<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="action_settings">Settings</string>
    <string name="app_name">BrandNewDay</string>
    <string name="add_new_alarm_button">Add New Alarm</string>
    <string name="alarms_view">My Alarms</string>
    <string name="alarm_1_toggleButton">Alarm 1</string>
    <string name="alarm_2_toggleButton">Alarm 2</string>
    <string name="add_new_playlist_button">Add New Playlist</string>
    <string name="alarm_1_settings_button">Settings 1</string>
    <string name="alarm_2_settings_button">Settings 2</string>
    <string name="alarm_nap_settings_button">Settings Nap</string>
    <string name="alarm_nap_toggleButton">Quick Nap</string>
    <string name="playlist_button">PlayList</string>
    <string name="add_song_to_playlist">Add New Song</string>
    <string name="wake_up_button">Wake Up</string>
    <string name="sleep_more_button">Sleep More</string>
    <string name="set_alarm_button">Set Alarm</string>
    <string name="set_nap_button">Set Nap</string>
    <string name="snooze_seekBar">Snooze</string>
    <string name="crescent_volume_mode_checkBox">Crescent Volume Mode</string>
    <string name="back_to_main_button">Back</string>
    <string name="title_activity_waking_time">Waking Time</string>
    <string name="title_activity_my_playlist">Song Selection</string>
    <string name="snoozing_time">3 minutes</string>
    <string name="snooze_disabled_checkBox">No Snooze</string>
    <string name="volume_textView">(volume)</string>
    <string name="volume_crescent_radioButton">Crescent</string>
    <string name="volume_low_radioButton">Low</string>
    <string name="volume_medium_radioButton">Medium</string>
    <string name="volume_high_radioButton">High</string>
    <string name="digitalclock">digitalClock</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_song_list">SongList</string>
    <string name="live">Acordar!</string>
    <string name="snooze_more">Zzzz...</string>
    <string name="title_activity_settings">Settings</string>
    <string name="two_points">:</string>
    <string name="settings_hour">08</string>
    <string name="settings_d_minutes">3</string>
    <string name="settings_u_minute">0</string>
    <string name="desc">description</string>
    <string name="snooze">10</string>
    <string name="min_textView">min</string>
    <string name="snooze_textView">(soneca)</string>
    <string name="mon_textView">SEG</string>
    <string name="tue_textView">TER</string>
    <string name="wed_textView">QUA</string>
    <string name="thu_textView">QUI</string>
    <string name="fri_textView">SEX</string>
    <string name="sat_textView">SAB</string>
    <string name="sun_textView">DOM</string>
    <string name="decrease_snooze">-</string>
    <string name="increase_snooze">+</string>
    <string name="alarm_1">8:30</string>
    <string name="alarm_2">10:10</string>
    <string name="alarm_3">9:30</string>
    <string name="nap">45</string>
    <string name="playlist_textView">Playlist</string>
    <string name="nap_of">(cochilo)</string>
    <string name="my_songs">(meus toques)</string>
    <string name="random_play">"(músicas que tocarão aleatoriamente nos alarmes)"</string>
    <string name="alarm1_textView">Alarme 1</string>
    <string name="alarm2_textView">Alarme 2</string>
    <string name="alarm3_textView">Alarme 3</string>
    <string name="title_activity_tab_host">TabHost</string>
    <string name="title_activity_tab">TabActivity</string>
    <string name="title_activity_song_tab">SongTab</string>
    <string name="title_activity_ringtones">Ringtones</string>

</resources>
