<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/black"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/days_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:baselineAligned="false" >

        <RelativeLayout
            android:id="@+id/mon"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/btn_inactive_small" >

            <TextView
                android:id="@+id/mon_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/mon_textView" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/tue"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/btn_inactive_small" >
            
            <TextView
                android:id="@+id/tue_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/tue_textView" />
        </RelativeLayout>
        
        <RelativeLayout
            android:id="@+id/wed"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/btn_inactive_small" >
            
            <TextView
                android:id="@+id/wed_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/wed_textView" />
        </RelativeLayout>
        
        <RelativeLayout
            android:id="@+id/thu"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/btn_inactive_small" >
            
            <TextView
                android:id="@+id/thu_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/thu_textView" />
        </RelativeLayout>
        
        <RelativeLayout
            android:id="@+id/fri"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/btn_inactive_small" >
            
            <TextView
                android:id="@+id/fri_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/fri_textView" />
        </RelativeLayout>
        
        <RelativeLayout
            android:id="@+id/sat"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/btn_inactive_small" >
            
            <TextView
                android:id="@+id/sat_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/sat_textView" />
        </RelativeLayout>
        
        <RelativeLayout
            android:id="@+id/sun"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/btn_inactive_small" >
            
            <TextView
                android:id="@+id/sun_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/sun_textView" />
        </RelativeLayout>

        

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/check_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8" >

        <ImageView
            android:id="@+id/check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/desc"
            android:src="@drawable/btn_check" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/time_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2" >

        <TextView
            android:id="@+id/two_points"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:text="@string/two_points"
            android:textSize="90sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/settings_hour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/two_points"
            android:text="@string/settings_hour"
            android:textSize="95sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/settings_d_minute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/two_points"
            android:text="@string/settings_d_minutes"
            android:textSize="95sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/settings_u_minute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/settings_d_minute"
            android:text="@string/settings_u_minute"
            android:textSize="95sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/increase_hour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/settings_hour"
            android:layout_alignLeft="@+id/settings_hour"
            android:layout_marginLeft="25dp"
            android:contentDescription="@string/desc"
            android:src="@drawable/ic_up" />
        
        <ImageView
            android:id="@+id/increase_d_minute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/settings_d_minute"
            android:layout_alignLeft="@+id/settings_d_minute"
            android:contentDescription="@string/desc"
            android:src="@drawable/ic_up" />
        
        <ImageView
            android:id="@+id/increase_u_minute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/settings_u_minute"
            android:layout_alignRight="@+id/settings_u_minute"
            android:contentDescription="@string/desc"
            android:src="@drawable/ic_up" />
        
        <ImageView
            android:id="@+id/decrease_hour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/settings_hour"
            android:layout_below="@id/settings_hour"
            android:layout_marginLeft="25dp"
            android:contentDescription="@string/desc"
            android:src="@drawable/ic_down" />
        
        <ImageView
            android:id="@+id/decrease_d_minute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/settings_d_minute"
            android:layout_alignLeft="@+id/settings_d_minute"
            android:contentDescription="@string/desc"
            android:src="@drawable/ic_down" />
        
        <ImageView
            android:id="@+id/decrease_u_minute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/settings_u_minute"
            android:layout_alignLeft="@+id/settings_u_minute"
            android:contentDescription="@string/desc"
            android:src="@drawable/ic_down" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/volume_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.4" >

        <ImageView
            android:id="@+id/volume_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/desc"
            android:src="@drawable/ic_volume" />

        <SeekBar
            android:id="@+id/volume_seekBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/volume_icon" />

        <TextView
            android:id="@+id/volume_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/volume_icon"
            android:layout_centerHorizontal="true"
            android:text="@string/volume_textView" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/snooze_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2" >

        <TextView
            android:id="@+id/snooze"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/snooze"
            android:textSize="60sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/min_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/snooze"
            android:layout_centerHorizontal="true"
            android:text="@string/min_textView"
            android:textSize="20sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/snooze_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/min_textView"
            android:layout_centerHorizontal="true"
            android:text="@string/snooze_textView" />

        <TextView
            android:id="@+id/decrease_snooze"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="25dp"
            android:layout_toLeftOf="@+id/snooze"
            android:text="@string/decrease_snooze"
            android:textSize="70sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/increase_snooze"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="25dp"
            android:layout_toRightOf="@+id/snooze"
            android:text="@string/increase_snooze"
            android:textSize="60sp"
            android:textStyle="bold" />

    </RelativeLayout>

</LinearLayout>